--- a/code/ressource-relation-api/serverless.yml
+++ b/code/ressource-relation-api/serverless.yml
@@ -25,83 +25,83 @@ provider:
       - ${self:custom.secrets.SUBNET2_ID}
 
 functions:
-  docs:
-    handler: handler.docs
-    events:
-      - http:
-          path: /
-          method: get
-          cors: true
-  tagCreate:
-    handler: handler.tagCreate
-    events:
-      - http:
-          path: tags
-          method: post
-          cors: true
-  tagGetOne:
-    handler: handler.tagGetOne
-    events:
-      - http:
-          path: tags/{id}
-          method: get
-          cors: true
-  tagGetAll:
-    handler: handler.tagGetAll
-    events:
-      - http:
-          path: tags
-          method: get
-          cors: true
-  tagUpdate:
-    handler: handler.tagUpdate
-    events:
-      - http:
-          path: tags/{id}
-          method: put
-          cors: true
-  tagDestroy:
-    handler: handler.tagDestroy
-    events:
-      - http:
-          path: tags/{id}
-          method: delete
-          cors: true
-  tagRelationCreate:
-    handler: handler.tagRelationCreate
-    events:
-      - http:
-          path: tagRelations
-          method: post
-          cors: true
-  tagRelationGetOne:
-    handler: handler.tagRelationGetOne
-    events:
-      - http:
-          path: tagRelations/{id}
-          method: get
-          cors: true
-  tagRelationGetAll:
-    handler: handler.tagRelationGetAll
-    events:
-      - http:
-          path: tagRelations
-          method: get
-          cors: true
-  tagRelationUpdate:
-    handler: handler.tagRelationUpdate
-    events:
-      - http:
-          path: tagRelations/{id}
-          method: put
-          cors: true
-  tagRelationDestroy:
-    handler: handler.tagRelationDestroy
-    events:
-      - http:
-          path: tagRelations/{id}
-          method: delete
-          cors: true
+  # docs:
+  #   handler: handler.docs
+  #   events:
+  #     - http:
+  #         path: /
+  #         method: get
+  #         cors: true
+  # tagCreate:
+  #   handler: handler.tagCreate
+  #   events:
+  #     - http:
+  #         path: tags
+  #         method: post
+  #         cors: true
+  # tagGetOne:
+  #   handler: handler.tagGetOne
+  #   events:
+  #     - http:
+  #         path: tags/{id}
+  #         method: get
+  #         cors: true
+  # tagGetAll:
+  #   handler: handler.tagGetAll
+  #   events:
+  #     - http:
+  #         path: tags
+  #         method: get
+  #         cors: true
+  # tagUpdate:
+  #   handler: handler.tagUpdate
+  #   events:
+  #     - http:
+  #         path: tags/{id}
+  #         method: put
+  #         cors: true
+  # tagDestroy:
+  #   handler: handler.tagDestroy
+  #   events:
+  #     - http:
+  #         path: tags/{id}
+  #         method: delete
+  #         cors: true
+  # tagRelationCreate:
+  #   handler: handler.tagRelationCreate
+  #   events:
+  #     - http:
+  #         path: tagRelations
+  #         method: post
+  #         cors: true
+  # tagRelationGetOne:
+  #   handler: handler.tagRelationGetOne
+  #   events:
+  #     - http:
+  #         path: tagRelations/{id}
+  #         method: get
+  #         cors: true
+  # tagRelationGetAll:
+  #   handler: handler.tagRelationGetAll
+  #   events:
+  #     - http:
+  #         path: tagRelations
+  #         method: get
+  #         cors: true
+  # tagRelationUpdate:
+  #   handler: handler.tagRelationUpdate
+  #   events:
+  #     - http:
+  #         path: tagRelations/{id}
+  #         method: put
+  #         cors: true
+  # tagRelationDestroy:
+  #   handler: handler.tagRelationDestroy
+  #   events:
+  #     - http:
+  #         path: tagRelations/{id}
+  #         method: delete
+  #         cors: true
   collectionCreate:
     handler: handler.collectionCreate
     events:
