--- a/code/ressource-relation-api/package.json
+++ b/code/ressource-relation-api/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "offline": "nodemon --exec \"sls offline start --skipCacheInvalidation\"",
-    "offline-tag": "nodemon --exec \"sls offline start --skipCacheInvalidation\"",
-    "deploy": "sls deploy",
-    "tag:install": "",
-    "tag:deploy": "",
-    "tag:offline": "sls deploy --function "
+    "collection:deploy": "cd ./api/collection && sls deploy",
+    "collection:offline": "cd ./api/collection && sls offline start --skipCacheInvalidation",
+    "community:deploy": "cd ./api/community && sls deploy",
+    "community:offline": "cd ./api/community && sls offline start --skipCacheInvalidation",
+    "relation:deploy": "cd ./api/relation && sls deploy",
+    "relation:offline": "cd ./api/relation && sls offline start --skipCacheInvalidation",
+    "resource:deploy": "cd ./api/resource && sls deploy",
+    "resource:offline": "cd ./api/resource && sls offline start --skipCacheInvalidation",
+    "tag:deploy": "cd ./api/tag && sls deploy",
+    "tag:offline": "cd ./api/tag && sls offline start --skipCacheInvalidation",
+    "user:deploy": "cd ./api/user && sls deploy",
+    "user:offline": "cd ./api/user && sls offline start --skipCacheInvalidation"
   },
   "keywords": [],
   "author": "Pascal Vautour",
