--- a/code/ressource-relation-api/api/relation/serverless.yml
+++ b/code/ressource-relation-api/api/relation/serverless.yml
@@ -1,4 +1,4 @@
-service: ${file(../../secrets.json):API_NAME}
+service: ${file(../../secrets.json):API_NAME}-relation
 
 custom:
   secrets: ${file(../../secrets.json)}
