spring cleaning and added scripts

--- a/code/ressource-relation-api/package.json
+++ b/code/ressource-relation-api/package.json
@@ -4,28 +4,26 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
+    "all:deploy": "npm run collection:deploy && npm run community:deploy && npm run relation:deploy && npm run resource:deploy && npm run tag:deploy && npm run user:deploy",
+    "all:offline": "npm run collection:offline & npm run community:offline & npm run relation:offline & npm run resource:offline & npm run tag:offline",
     "collection:deploy": "cd ./api/collection && sls deploy",
-    "collection:offline": "cd ./api/collection && sls offline start --skipCacheInvalidation",
+    "collection:offline": "cd ./api/collection && sls offline --port 3001 start  --skipCacheInvalidation",
     "community:deploy": "cd ./api/community && sls deploy",
-    "community:offline": "cd ./api/community && sls offline start --skipCacheInvalidation",
+    "community:offline": "cd ./api/community && sls offline start --port 3002 --skipCacheInvalidation",
     "relation:deploy": "cd ./api/relation && sls deploy",
-    "relation:offline": "cd ./api/relation && sls offline start --skipCacheInvalidation",
+    "relation:offline": "cd ./api/relation && sls offline start --port 3003 --skipCacheInvalidation",
     "resource:deploy": "cd ./api/resource && sls deploy",
-    "resource:offline": "cd ./api/resource && sls offline start --skipCacheInvalidation",
+    "resource:offline": "cd ./api/resource && sls offline start --port 3004 --skipCacheInvalidation",
     "tag:deploy": "cd ./api/tag && sls deploy",
-    "tag:offline": "cd ./api/tag && sls offline start --skipCacheInvalidation",
+    "tag:offline": "cd ./api/tag && sls offline start --port 3005 --skipCacheInvalidation",
     "user:deploy": "cd ./api/user && sls deploy",
-    "user:offline": "cd ./api/user && sls offline start --skipCacheInvalidation"
+    "user:offline": "cd ./api/user && sls offline start --port 3006 --skipCacheInvalidation",
+    "clean": "rm -rf ../ressource-relation-api.webpack/"
   },
   "keywords": [],
   "author": "Pascal Vautour",
   "license": "",
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "babel-preset-env": "^1.7.0",
-    "nodemon": "^2.0.2",
     "serverless": "^1.61.1",
     "serverless-offline": "^5.12.1",
     "serverless-pseudo-parameters": "^2.5.0",
