--- a/code/ressource-relation-api/package.json
+++ b/code/ressource-relation-api/package.json
@@ -23,18 +23,16 @@
     "ownershipRelation:test": "cd ./api/ownership-relation && mocha",
     "webpack:clean": "rm -rf ../ressource-relation-api.webpack/",
     "database:clean": "sudo docker stop nrcanresourcetestdb && sudo docker rm nrcanresourcetestdb",
-    "database:offline": "sudo docker run -p 3306:3306 --name nrcanresourcetestdb -e MYSQL_ROOT_PASSWORD=root -e MYSQL_DATABASE=test -e MYSQL_USER=root -d mysql:5"
+    "database:offline": "sudo docker run -p 3306:3306 --name nrcanresourcetestdb -e MYSQL_ROOT_PASSWORD=root -e MYSQL_DATABASE=test -e MYSQL_USER=root -d mysql:5",
+    "database:offline:connect": "mysql -h 127.0.0.1 -P 3306 --protocol=tcp -u root -p"
   },
   "keywords": [],
   "author": "Pascal Vautour",
   "license": "",
   "devDependencies": {
     "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "chai-fetch": "^0.3.1",
     "chai-http": "^4.3.0",
     "mocha": "^7.0.0",
-    "node-fetch": "^2.6.0",
     "serverless": "^1.61.1",
     "serverless-offline": "^5.12.1",
     "serverless-pseudo-parameters": "^2.5.0",
@@ -44,6 +42,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "apidoc-sequelize-generator": "^1.0.5",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.3"
