--- a/code/ressource-relation-api/package.json
+++ b/code/ressource-relation-api/package.json
@@ -32,6 +32,8 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "chai-shallow-deep-equal": "^1.4.6",
+    "chai-subset": "^1.6.0",
     "mocha": "^7.0.0",
     "serverless": "^1.61.1",
     "serverless-offline": "^5.12.1",
