--- a/code/ressource-relation-api/package.json
+++ b/code/ressource-relation-api/package.json
@@ -36,6 +36,7 @@
     "chai-subset": "^1.6.0",
     "mocha": "^7.0.0",
     "serverless": "^1.61.1",
+    "serverless-dotenv-plugin": "^2.1.1",
     "serverless-offline": "^5.12.1",
     "serverless-pseudo-parameters": "^2.5.0",
     "serverless-webpack": "^5.3.1",
