--- a/code/ressource-relation-api/package.json
+++ b/code/ressource-relation-api/package.json
@@ -7,19 +7,19 @@
     "all:deploy": "npm run collection:deploy && npm run community:deploy && npm run relation:deploy && npm run resource:deploy && npm run tag:deploy && npm run user:deploy && npm run ownershipRelation:deploy",
     "all:offline": "npm run collection:offline & npm run community:offline & npm run relation:offline & npm run resource:offline & npm run tag:offline & npm run user:offline & npm run ownershipRelation:offline",
     "collection:deploy": "cd ./api/collection && sls deploy",
-    "collection:offline": "cd ./api/collection && sls offline --port 3001 start  --skipCacheInvalidation",
+    "collection:offline": "cd ./api/collection && sls offline --watch --port 3001 start  --skipCacheInvalidation",
     "community:deploy": "cd ./api/community && sls deploy",
-    "community:offline": "cd ./api/community && sls offline start --port 3002 --skipCacheInvalidation",
+    "community:offline": "cd ./api/community && sls offline start --watch --port 3002 --skipCacheInvalidation",
     "relation:deploy": "cd ./api/relation && sls deploy",
-    "relation:offline": "cd ./api/relation && sls offline start --port 3003 --skipCacheInvalidation",
+    "relation:offline": "cd ./api/relation && sls offline start --watch --port 3003 --skipCacheInvalidation",
     "resource:deploy": "cd ./api/resource && sls deploy",
-    "resource:offline": "cd ./api/resource && sls offline start --port 3004 --skipCacheInvalidation",
+    "resource:offline": "cd ./api/resource && sls offline start --watch --port 3004 --skipCacheInvalidation",
     "tag:deploy": "cd ./api/tag && sls deploy",
-    "tag:offline": "cd ./api/tag && sls offline start --port 3005 --skipCacheInvalidation",
+    "tag:offline": "cd ./api/tag && sls offline start --watch --port 3005 --skipCacheInvalidation",
     "user:deploy": "cd ./api/user && sls deploy",
-    "user:offline": "cd ./api/user && sls offline start --port 3006 --skipCacheInvalidation",
+    "user:offline": "cd ./api/user && sls offline start --watch --port 3006 --skipCacheInvalidation",
     "ownershipRelation:deploy": "cd ./api/ownership-relation && sls deploy",
-    "ownershipRelation:offline": "cd ./api/ownership-relation && sls offline start --port 3007 --skipCacheInvalidation",
+    "ownershipRelation:offline": "cd ./api/ownership-relation && sls offline start --watch --port 3007 --skipCacheInvalidation",
     "ownershipRelation:test": "cd ./api/ownership-relation && mocha",
     "webpack:clean": "rm -rf ../ressource-relation-api.webpack/",
     "database:clean": "sudo docker stop nrcanresourcetestdb && sudo docker rm nrcanresourcetestdb",
