--- a/code/ressource-relation-api/package.json
+++ b/code/ressource-relation-api/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "all:deploy": "npm run collection:deploy && npm run community:deploy && npm run relation:deploy && npm run resource:deploy && npm run tag:deploy && npm run user:deploy && npm run ownershipRelation:deploy",
-    "all:offline": "npm run collection:offline & npm run community:offline & npm run relation:offline & npm run resource:offline & npm run tag:offline & npm run user:offline & npm run ownershipRelation:offline",
+    "all:deploy": "npm run collection:deploy && npm run community:deploy && npm run relation:deploy && npm run resource:deploy && npm run tag:deploy && npm run user:deploy && npm run ownership-relation:deploy",
+    "all:offline": "npm run collection:offline & npm run community:offline & npm run relation:offline & npm run resource:offline & npm run tag:offline & npm run user:offline & npm run ownership-relation:offline",
     "collection:deploy": "cd ./api/collection && sls deploy",
     "collection:offline": "cd ./api/collection && sls offline --watch --port 3001 start  --skipCacheInvalidation",
     "community:deploy": "cd ./api/community && sls deploy",
@@ -18,13 +18,17 @@
     "tag:offline": "cd ./api/tag && sls offline start --watch --port 3005 --skipCacheInvalidation",
     "user:deploy": "cd ./api/user && sls deploy",
     "user:offline": "cd ./api/user && sls offline start --watch --port 3006 --skipCacheInvalidation",
-    "ownershipRelation:deploy": "cd ./api/ownership-relation && sls deploy",
-    "ownershipRelation:offline": "cd ./api/ownership-relation && sls offline start --watch --port 3007 --skipCacheInvalidation",
-    "ownershipRelation:test": "cd ./api/ownership-relation && mocha",
+    "ownership-relation:deploy": "cd ./api/ownership-relation && sls deploy",
+    "ownership-relation:offline": "cd ./api/ownership-relation && sls offline start --watch --port 3007 --skipCacheInvalidation",
+    "ownership-relation:test": "cd ./api/ownership-relation && mocha",
+    "ownership-relation:community-collection:deploy": "cd ./api/ownership-relation-2 && sls deploy",
+    "ownership-relation:community-collection:offline": "cd ./api/ownership-relation-2 && sls offline start --watch --port 3009 --skipCacheInvalidation",
+    "ownership-relation:community-collection:test": "cd ./api/ownership-relation-2 && mocha",
     "webpack:clean": "rm -rf ../ressource-relation-api.webpack/",
     "database:clean": "sudo docker stop nrcanresourcetestdb && sudo docker rm nrcanresourcetestdb",
     "database:offline": "sudo docker run -p 3306:3306 --name nrcanresourcetestdb -e MYSQL_ROOT_PASSWORD=root -e MYSQL_DATABASE=test -e MYSQL_USER=root -d mysql:5",
-    "database:offline:connect": "mysql -h 127.0.0.1 -P 3306 --protocol=tcp -u root -p"
+    "database:offline:connect": "mysql -h 127.0.0.1 -P 3306 --protocol=tcp -u root -p",
+    "port:clean": "sudo fuser -k 3001/tcp & sudo fuser -k 3002/tcp & sudo fuser -k 3003/tcp & sudo fuser -k 3004/tcp & sudo fuser -k 3005/tcp & sudo fuser -k 3006/tcp & sudo fuser -k 3007/tcp & sudo fuser -k 3008/tcp"
   },
   "keywords": [],
   "author": "Pascal Vautour",
