comunity-tag ownership relation created and functionnal

--- a/code/ressource-relation-api/package.json
+++ b/code/ressource-relation-api/package.json
@@ -24,6 +24,9 @@
     "ownership-relation:community-collection:deploy": "cd ./api/ownership-relation-2 && sls deploy",
     "ownership-relation:community-collection:offline": "cd ./api/ownership-relation-2 && sls offline start --watch --port 3009 --skipCacheInvalidation",
     "ownership-relation:community-collection:test": "cd ./api/ownership-relation-2 && mocha",
+    "ownership-relation:community-tag:deploy": "cd ./api/ownership-relation/community-tag && sls deploy",
+    "ownership-relation:community-tag:offline": "cd ./api/ownership-relation/community-tag && sls offline start --watch --port 3009 --skipCacheInvalidation",
+    "ownership-relation:community-tag:test": "cd ./api/ownership-relation/community-tag && mocha",
     "webpack:clean": "rm -rf ../ressource-relation-api.webpack/",
     "database:clean": "sudo docker stop nrcanresourcetestdb && sudo docker rm nrcanresourcetestdb",
     "database:offline": "sudo docker run -p 3306:3306 --name nrcanresourcetestdb -e MYSQL_ROOT_PASSWORD=root -e MYSQL_DATABASE=test -e MYSQL_USER=root -d mysql:5",
